Modal scroll bar overflow fix and Overlay close when click

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -919,7 +919,7 @@ footer {
   width: 400px;
   background: #445566;
   position: fixed;
-  top: 32%;
+  top: 42%;
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 5px;
@@ -1345,6 +1345,6 @@ footer {
 
 
 // Para que no se pueda scrollear cuando el modal sea visible
-body{
-  overflow: hidden;
-}
+// body{
+//   overflow: hidden;
+// }
